<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    >

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/MainPageBackgroundColor"
    >

    <TextView
        android:id="@+id/textView"
        style="@style/HeaderText"
        android:text="@string/MainActivityTitle"
    />

    <Button
        android:id="@+id/App1Button"
        style="@style/RequiredProjectButtonLayout"
        android:text="@string/App1ButtonText"
    />

    <Button
        android:id="@+id/App2Button"
        style="@style/RequiredProjectButtonLayout"
        android:text="@string/App2ButtonText"
    />

    <Button
        android:id="@+id/App3Button"
        style="@style/RequiredProjectButtonLayout"
        android:text="@string/App3ButtonText"
    />

    <Button
        android:id="@+id/App4Button"
        style="@style/RequiredProjectButtonLayout"
        android:text="@string/App4ButtonText"
    />

    <Button
        android:id="@+id/App5Button"
        style="@style/RequiredProjectButtonLayout"
        android:text="@string/App5ButtonText"
    />

    <Button
        android:id="@+id/App6Button"
        style="@style/PersonalProjectButtonLayout"
        android:text="@string/App6ButtonText"
    />

</LinearLayout>
</ScrollView>
